// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`answer with a trailing unit preview should render a percentage answer 1`] = `
<Field>
  <AnswerTrailingUnit__Wrapper>
    <Label
      description="Description"
    >
      Label
    </Label>
    <InputWithUnit
      trailing={true}
      unit="%"
    />
  </AnswerTrailingUnit__Wrapper>
</Field>
`;

exports[`answer with a trailing unit preview should render a unit answer 1`] = `
<Field>
  <AnswerTrailingUnit__Wrapper>
    <Label
      description="Description"
    >
      Label
    </Label>
    <InputWithUnit
      trailing={true}
      unit="cm"
    />
  </AnswerTrailingUnit__Wrapper>
</Field>
`;
